meta tag to diable mix-content-error

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 	<title>Random Quote Generator</title>
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script type="text/javascript" src="javascript.js">
 	</script>
